--- a/stles.css
+++ b/stles.css
@@ -1,13 +1,2 @@
-/* código omitido */
-
-section {
-    background: blue(184,156,213);
-    padding-bottom: 80px;
-    padding-top: 80px;
-    display: flex;
-    justify-content: center;
-}
-
-.chamada-texto {
-    margin-right: 5%;
-}
+header
+    padding :
