--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body {
-    clor: rgb(14, 100, 33);
+    color: rgb(14, 100, 33);
     background: white
 }
 
 header {
-    border: sollid 2px rgb(14, 100, 33);
+    border: solid 2px rgb(14, 100, 33);
 }
